# rust-pyreqs

./: Cargo.toml  README.md
src/: cli.rs  main.rs  mapping  resolver.rs  scanner.rs  version.rs  writer.rs
