[package]
name = "rust-pyreqs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2.5"
regex = "1.11"
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.97"
lazy_static = "1.5"
prettytable = "0.10"
rayon = "1.10.0"
